Add drawing of cones

--- a/notes/lattice-order.tex
+++ b/notes/lattice-order.tex
@@ -4,6 +4,8 @@
 \date{\today}
 \title{Investigations into New Lattice Orderings}
 
+\usepackage{color}
+\usepackage{graphicx}
 \usepackage[round]{natbib}
 
 \newtheorem{definition}{Definition}
@@ -50,6 +52,10 @@ together with a partial ordering $\le$ that satisfies:
 for all $u,v,w \in V$ and $\alpha \ge 0$. If the partial ordering is a
 lattice, then the vector space is called a vector lattice or
 \textbf{Riesz space}.
+
+\begin{center}
+\input{cones.tex}
+\end{center}
 
 A \textbf{cone} is a subset $C$ of a vector space satisfying
 \begin{itemize}
