Add a few drawings

--- a/notes/lattice-order.tex
+++ b/notes/lattice-order.tex
@@ -53,9 +53,22 @@ for all $u,v,w \in V$ and $\alpha \ge 0$. If the partial ordering is a
 lattice, then the vector space is called a vector lattice or
 \textbf{Riesz space}.
 
+\begin{figure}
+\begin{center}
+\input{cone.tex}
+\end{center}
+\caption{A cone $C$ defining a lattice ordering on the two dimensional
+  vector space in the plane.}
+\end{figure}
+
+\begin{figure}
 \begin{center}
 \input{cones.tex}
 \end{center}
+\caption{The join of two elements $u$ and $v$ and the spaces $u + C$
+  and $v + C$ where $C$ is the cone defining the ordering of the
+  space.}
+\end{figure}
 
 A \textbf{cone} is a subset $C$ of a vector space satisfying
 \begin{itemize}
