Rewrite section on relating strings of different lengths using vector space orderings

--- a/notes/lattice-order/contexts.bib
+++ b/notes/lattice-order/contexts.bib
@@ -276,6 +276,15 @@ year = 	 {2008},
 	year = "2009",
 }
 
+@inproceedings{Clarke:10,
+  title={Semantic composition with quotient algebras},
+  author={Clarke, D. and Lutz, R. and Weir, D.},
+  booktitle={Proceedings of the 2010 Workshop on GEometrical Models of Natural Language Semantics},
+  pages={38--44},
+  year={2010},
+  organization={Association for Computational Linguistics}
+}
+
 @inproceedings{Clarke:11,
   title={Algebraic approaches to compositional distributional semantics},
   author={Daoud Clarke and David Weir and Rudi Lutz},
