Fix cone formula

--- a/notes/lattice-order/lattice-order.tex
+++ b/notes/lattice-order/lattice-order.tex
@@ -207,7 +207,7 @@ Let $C$ be the positive cone on $T(V)$ as defined above, i.e.~the set
 of all vectors $u\in T(V)$ such that $u \ge 0$. Under the standard
 ordering, strings of different lengths are not related, so we add
 additional vectors to $C$ to relate them. Let
-$$C' = C \cup \{ u - u\otimes v : u,v \in C \}$$
+$$C' = C \cup \{ u - u\otimes v : u,v \in C \} \cup \{ v - u\otimes v : u,v \in C \}$$
 This defines a cone which behaves as the normal ordering for strings
 of the same length, but allows strings of different lengths to be
 related.
