--- a/_posts/2013-10-29-fear.md
+++ b/_posts/2013-10-29-fear.md
@@ -7,27 +7,27 @@ tags: []
 ---
 {% include JB/setup %}
 
-Did Fear betwixt the winters hide, 
-In Autumn, donned his mangy hide, 
-"Hail all, all's well!" he ravenously cried. 
-He lied. 
+Did Fear betwixt the winters hide,
+<br>In Autumn, donned his mangy hide,
+<br>"Hail all, all's well!" he ravenously cried.
+<br>He lied.
 
-And now he darkens darkness skyed, 
-And now the hands of cold untied, 
-And now his hunger grows. With every stride 
-They died. 
+And now he darkens darkness skyed,
+<br>And now the hands of cold untied,
+<br>And now his hunger grows. With every stride
+<br>They died.
 
-The mother begs a piece of bread; 
-She claims the cold's gone to his head. 
-"Or maybe you could spare a quid instead," 
-She said. 
+The mother begs a piece of bread;
+<br>She claims the cold's gone to his head.
+<br>"Or maybe you could spare a quid instead,"
+<br>She said.
 
-How art thou, banker, in thy lair? 
-Dost thou know that it's unfair? 
-Canst thou see (wouldst thou give the merest care) 
-Her stare? 
+How art thou, banker, in thy lair?
+<br>Dost thou know that it's unfair?
+<br>Canst thou see (wouldst thou give the merest care)
+<br>Her stare?
 
-When all's repaid that has been spent 
-That day there will be no relent 
-Wouldst thou, before then, offer some consent, 
-Repent?
+When all's repaid that has been spent
+<br>That day there will be no relent
+<br>Wouldst thou, before then, offer some consent,
+<br>Repent?
